--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   datasource:
     url: jdbc:mysql://mysql-container/eongaz?allowPublicKeyRetrieval=true&useSSL=false
+    # url: jdbc:mysql://localhost:3306/eongaz?allowPublicKeyRetrieval=true&useSSL=false
     username: root
     password: root
 
@@ -9,4 +10,4 @@ spring:
       ddl-auto: update
 
 repository-type: JPA
-create-seed: TRUE
+create-seed: FALSE
